# okotoba

./: dune-project  okotoba.opam
lib/: app.ml  cmd.ml  dune  okotoba.ml  pathbuf.ml  word.ml
lib/kotobaCmd/: dune  kotobaAdd.ml  kotobaCmd.ml  kotobaInit.ml  kotobaLesson.ml  kotobaLessonCreate.ml  kotobaLessonInit.ml
lib/kotobaCore/: app.ml  dune  kotobaCore.ml  lesson.ml  wizard.ml  word.ml
lib/util/: dune  file.ml  util.ml
test/: dune
